Fixed The Alignment Of Footer

--- a/client/src/components/Footer/FooterStyle.css
+++ b/client/src/components/Footer/FooterStyle.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
-    justify-content:space-evenly;
+    justify-content:center;
     align-items: center;
 }
 .footer{
